Error in copy/paste

--- a/traefik.toml
+++ b/traefik.toml
@@ -1,5 +1,5 @@
-
-bal configuration
+################################################################
+# Global configuration
 ################################################################
 
 # Timeout in seconds.
